ndb - bug#48416 - record the fake-unique-index-triggers created during upgrade as true schema object, to avoid id-collision